compiler/lume_hir/src/snapshots/lume_hir__lower__tests__function_definition_snapshots@statements.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower(\"fn main() -> void { let a = 0; let b = 1; }\")"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        15299231299772503292: Function(
            FunctionDefinition {
                id: 15299231299772503292,
                func_id: None,
                visibility: Private,
                name: 'main',
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        name: 'void',
                        type_params: [],
                        location: <internal>:13:17,
                    },
                ),
                block: Block {
                    statements: [
                        Statement {
                            id: 0,
                            kind: Variable(
                                VariableDeclaration {
                                    id: 0,
                                    name: Identifier {
                                        name: "a",
                                        location: <internal>:24:25,
                                    },
                                    declared_type: None,
                                    value: Expression {
                                        id: 5871781006564002453,
                                        location: <internal>:28:29,
                                        kind: Literal(
                                            Literal {
                                                id: 5871781006564002453,
                                                location: <internal>:28:29,
                                                kind: Int(
                                                    IntLiteral {
                                                        id: 5871781006564002453,
                                                        value: 0,
                                                        kind: I32,
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                },
                            ),
                            location: <internal>:20:30,
                        },
                        Statement {
                            id: 11743562013128004906,
                            kind: Variable(
                                VariableDeclaration {
                                    id: 11743562013128004906,
                                    name: Identifier {
                                        name: "b",
                                        location: <internal>:35:36,
                                    },
                                    declared_type: None,
                                    value: Expression {
                                        id: 17615343019692007359,
                                        location: <internal>:39:40,
                                        kind: Literal(
                                            Literal {
                                                id: 17615343019692007359,
                                                location: <internal>:39:40,
                                                kind: Int(
                                                    IntLiteral {
                                                        id: 17615343019692007359,
                                                        value: 1,
                                                        kind: I32,
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                },
                            ),
                            location: <internal>:31:41,
                        },
                    ],
                    location: <internal>:18:43,
                },
                location: <internal>:0:43,
            },
        ),
    },
    statements: {
        0: Statement {
            id: 0,
            kind: Variable(
                VariableDeclaration {
                    id: 0,
                    name: Identifier {
                        name: "a",
                        location: <internal>:24:25,
                    },
                    declared_type: None,
                    value: Expression {
                        id: 5871781006564002453,
                        location: <internal>:28:29,
                        kind: Literal(
                            Literal {
                                id: 5871781006564002453,
                                location: <internal>:28:29,
                                kind: Int(
                                    IntLiteral {
                                        id: 5871781006564002453,
                                        value: 0,
                                        kind: I32,
                                    },
                                ),
                            },
                        ),
                    },
                },
            ),
            location: <internal>:20:30,
        },
        11743562013128004906: Statement {
            id: 11743562013128004906,
            kind: Variable(
                VariableDeclaration {
                    id: 11743562013128004906,
                    name: Identifier {
                        name: "b",
                        location: <internal>:35:36,
                    },
                    declared_type: None,
                    value: Expression {
                        id: 17615343019692007359,
                        location: <internal>:39:40,
                        kind: Literal(
                            Literal {
                                id: 17615343019692007359,
                                location: <internal>:39:40,
                                kind: Int(
                                    IntLiteral {
                                        id: 17615343019692007359,
                                        value: 1,
                                        kind: I32,
                                    },
                                ),
                            },
                        ),
                    },
                },
            ),
            location: <internal>:31:41,
        },
    },
    expressions: {
        5871781006564002453: Expression {
            id: 5871781006564002453,
            location: <internal>:28:29,
            kind: Literal(
                Literal {
                    id: 5871781006564002453,
                    location: <internal>:28:29,
                    kind: Int(
                        IntLiteral {
                            id: 5871781006564002453,
                            value: 0,
                            kind: I32,
                        },
                    ),
                },
            ),
        },
        17615343019692007359: Expression {
            id: 17615343019692007359,
            location: <internal>:39:40,
            kind: Literal(
                Literal {
                    id: 17615343019692007359,
                    location: <internal>:39:40,
                    kind: Int(
                        IntLiteral {
                            id: 17615343019692007359,
                            value: 1,
                            kind: I32,
                        },
                    ),
                },
            ),
        },
    },
}
