compiler/lume_hir/src/snapshots/lume_hir__lower__tests__generic_class_snapshots@constrained_generics.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower(\"class Test<T1: Numeric, T2: Numeric> {}\").unwrap()"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        15340443703565705568: Type(
            Class(
                ClassDefinition {
                    id: 15340443703565705568,
                    type_id: None,
                    name: Test,
                    builtin: false,
                    members: [],
                    type_parameters: [
                        TypeParameter {
                            name: Identifier {
                                name: "T1",
                                location: <internal>:11:13,
                            },
                            type_id: None,
                            type_param_id: None,
                            constraints: [
                                Type {
                                    name: Numeric,
                                    type_params: [],
                                    location: <internal>:15:22,
                                },
                            ],
                            location: <internal>:11:13,
                        },
                        TypeParameter {
                            name: Identifier {
                                name: "T2",
                                location: <internal>:24:26,
                            },
                            type_id: None,
                            type_param_id: None,
                            constraints: [
                                Type {
                                    name: Numeric,
                                    type_params: [],
                                    location: <internal>:28:35,
                                },
                            ],
                            location: <internal>:24:26,
                        },
                    ],
                    location: <internal>:0:39,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
