compiler/lume_hir/src/snapshots/lume_hir__lower__tests__generic_class_snapshots@no_generics.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower(\"class Test {}\").unwrap()"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        15340443703565705568: Type(
            Class(
                ClassDefinition {
                    id: 15340443703565705568,
                    type_id: None,
                    name: Test,
                    builtin: false,
                    members: [],
                    type_parameters: [],
                    location: <internal>:0:13,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
