compiler/lume_hir/src/snapshots/lume_hir__lower__tests__generic_class_snapshots@single_generic.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower(\"class Test<T> {}\").unwrap()"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        15340443703565705568: Type(
            Class(
                ClassDefinition {
                    id: 15340443703565705568,
                    type_id: None,
                    name: Test,
                    builtin: false,
                    members: [],
                    type_parameters: [
                        TypeParameter {
                            name: Identifier {
                                name: "T",
                                location: <internal>:11:12,
                            },
                            type_id: None,
                            type_param_id: None,
                            constraints: [],
                            location: <internal>:11:12,
                        },
                    ],
                    location: <internal>:0:16,
                },
            ),
        ),
    },
    statements: {},
    expressions: {},
}
